Small changes: added social links fixed opening of nav on iOS devices fixed Our Work page's proportions

--- a/public/styles/stylesheet.css
+++ b/public/styles/stylesheet.css
@@ -63,6 +63,10 @@ header a {
     cursor: default;
 }
 
+header a:focus {
+    outline: none;
+}
+
 header a img {
     height: 100%;
 }
